fix kaggle name

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -69,7 +69,7 @@
             {% if site.author.kaggle_name %}
             <!-- Kaggle -->
             <li class="navigation__item">
-              <a href="https://www.kaggle.com/{{ site.author.kaggle8name }}" title="{{ site.author.kaggle_name }} on Kaggle" target="_blank">
+              <a href="https://www.kaggle.com/{{ site.author.kaggle_name }}" title="{{ site.author.kaggle_name }} on Kaggle" target="_blank">
                 <i class="fab fa-kaggle fa-lg"></i>
                 <span class="label">Kaggle</span>
               </a>
