--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,8 +13,8 @@
           <h1 class="panel-cover__title panel-title">Hi, I'm {{ site.title }}</h1>
         </a>
         <hr class="panel-cover__divider">
-        <p class="panel-cover__description">I'm a cofounder & lead developer at <a href="https://www.spottt/fr">Spottt</a>.</p>
-        <p class="panel-cover__description">Passionate about using deep learning to make the world a better place.</p>
+        <p class="panel-cover__description">I'm a co-founder & VP of Engineering at <a href="https://www.spottt/fr">Spottt</a>.</p>
+        <p class="panel-cover__description">Autodidact passionate about learning, functional programming, AI x energy, AI x healthcare</p>
         <hr class="panel-cover__divider panel-cover__divider--secondary">
 
         <div class="navigation-wrapper">
